--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
               </div>
               <div id="villageEnemyAppear"class="col-xs-5">
-                <img class="Turkerus villageEnemy" src="images/turkerus_burned.png" alt="" />
+
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
 
               </div>
               <div id="hauntedEnemyAppear"class="col-xs-5">
-                <img class="Turkerus hauntedEnemy" src="images/turkerus_burned.png" alt="" />
+
               </div>
             </div>
           </div>
@@ -210,7 +210,7 @@
                 <img class="Ned towerHero" src="images/necromancer_burned.png" alt="" />
               </div>
               <div id="towerEnemyAppear" class="col-xs-5">
-                <img class="Turkerus towerEnemy" src="images/turkerus_burned.png" alt="" />
+
               </div>
               <div class="col-xs-5">
 
@@ -234,7 +234,7 @@
 
               </div>
               <div id="trailerEnemyAppear" class="col-xs-5">
-                <img class="Turkerus trailerEnemy" src="images/turkerus_burned.png" alt="" />
+
               </div>
             </div>
           </div>
@@ -274,8 +274,8 @@
               <div class="col-xs-5">
 
               </div>
-              <div class="col-xs-5">
-                <img class="Turkerus castleEnemy" src="images/turkerus_burned.png" alt="" />
+              <div class="col-xs-5" id="castleEnemyAppear">
+
               </div>
             </div>
           </div>
@@ -285,7 +285,7 @@
         <div class="row">
           <div class="col-md-12" id="swampLocation">
             <div class="row">
-              <div class="swampPlayerAppear" class="col-xs-1">
+              <div class="col-xs-1" id="swampPlayerAppear">
                 <img class="Tinks swampHero" src="images/druid_burned.png" alt="" />
                 <img class="Tex swampHero" src="images/cleric_burned.png" alt="" />
                 <img class="Stunner swampHero" src="images/taxidermy-pikachu_burned.png" alt="" />
@@ -295,8 +295,8 @@
               <div class="col-xs-5">
 
               </div>
-              <div class="col-xs-4">
-                <!-- <img class="Turkerus swampEnemy" src="images/turkerus_burned.png" alt="" /> -->
+              <div class="col-xs-4" id="swampEnemyAppear">
+
               </div>
             </div>
           </div>
